# yet-another-yew-app

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-dummy-sse-services.yml  index.css  index.html
dummy-sse-services/: Dockerfile  pom.xml
dummy-sse-services/src/main/java/com/itwasneo/dummysseservice/: DummySSEService.java  Event.java
src/: main.rs
src/components/: event_source_component.rs  latency_component.rs  mod.rs
src/services/: event_bus.rs  event_source.rs  mod.rs
