[package]
name = "yet-another-yew-app"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
yew = "0.19"
yew-agent = "0.1.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["EventSource"] }
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
wasm-logger = "0.2.0"
